# MusicTheoryPad

./: .gitignore  CMakeLists.txt  README.md  generate_files.py  patch.cmake
.github/workflows/: android.yml
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Audio/: AudioEngine.h  DrumSynth.cpp  DrumSynth.h  SynthVoice.h
Source/LookAndFeel/: AppLookAndFeel.cpp  AppLookAndFeel.h
Source/Midi/: MidiIO.cpp  MidiIO.h
Source/State/: CompositionState.cpp  CompositionState.h
Source/Theory/: MusicTheory.cpp  MusicTheory.h
Source/UI/: BottomPlayerBar.cpp  BottomPlayerBar.h  CardComponent.h  ChordPaletteComponent.cpp  ChordPaletteComponent.h  ControlsPanel.cpp  ControlsPanel.h  HeaderBar.cpp  HeaderBar.h  PianoRollGrid.cpp  PianoRollGrid.h  PianoRollSection.cpp  PianoRollSection.h  ProgressionComponent.cpp  ProgressionComponent.h  SavedMidiSidebar.cpp  SavedMidiSidebar.h  TheoryInfoComponent.cpp  TheoryInfoComponent.h
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/release/res/values/: string.xml
build-android-test/: CMakeCache.txt
build-projucer/tools/: CMakeCache.txt  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
build-projucer/tools/modules/: Makefile  cmake_install.cmake
